@@ -29,6 +29,7 @@
 		<flag name="strong-optimization">Adds several more agressive CXXFLAGS/LDFLAGS for optimization like graphite (if available). May cause trouble with some buggy compiler versions. Absense of this USE flag does not strip user's *FLAGS</flag>
 		<flag name="strong-security">Add many checks to prevent exploits if eix code has a bug. This will slow down eix considerably. Use only if you are paranoid or have reasons to suspect a bug.</flag>
 		<flag name="sqlite">Compile in support for portage's sqlite backend; to actually use it you need additional configuration of portage and eix</flag>
+		<flag name="swap-remote">Swap role of remote addresses in eix-remote, making the data from gpo.zugaina.org the first choice.</flag>
 		<flag name="tools">Create separate binary for script helper tools; useful if they are called extremely often</flag>
 	</use>
 </pkgmetadata>
