@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Mar 2013; Martin Väth <martin@mvath.de>
+  Require >=gettext-0.18.2. Add USE=swap-remote.
+
   26 Jan 2013; Martin Väth <martin@mvath.de>
   Add IUSE=strong-security
 
